--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -1,88 +1,11 @@
-@import "variables.scss";
+@import "variables";
+@import "base";
+@import "headline";
 
-html {
-  font-size: percentage(10/16);
-}
+@import "navigation";
+@import "intro";
 
-body {
-  background-color: $color-background;
-  color: $text-color;
-  font-family: sans-serif;
-  margin: 0;
-
-  font-size: 1.6rem;
-}
-
-a {
-  color: inherit;
-}
-
-.st-navigation {
-  position: sticky;
-  z-index: 1;
-  top: 0px;
-  color: #202840;
-  background-color: #fff;
-  padding: 10px 20px;
-  border-bottom: 1px solid #def5fa;
-}
-
-.st-navigation__item {
-  text-decoration: none;
-}
-
-.st-navigation__item--curent {
-  border-bottom: 2px solid $highlight;
-}
-
-.st-satellyte {
-  width: 100%;
-  // max-height: 400px;
-  display: block;
-  width: 400px;;
-}
-
-.sy-main-container {
-}
 .sy-section {
-  max-width: 340px;
-  margin-bottom: 30px;
-  padding: 20px;
+  max-width: 500px;
   margin: auto;
-}
-
-.sy-button {
-  color: #282c59;
-  background-color: $highlight;
-  border: 0;
-  padding: 10px;
-  width: 100%;
-  text-align: left;
-  font-weight: 600;
-  &:hover {
-    background-color: #282c59;
-    color: $highlight;
-  }
-}
-
-
-.sy-headline {
-  font-weight: 300;
-  margin: 0;
-}
-
-.sy-headline--text {
-  font-size: 2rem;
-  font-weight: 600;
-}
-
-.sy-headline--sub {
-  color: $highlight;
-  font-size: 2rem;
-  font-weight: 600;
-}
-
-.sy-headline--main {
-  color: $highlight;
-  font-size: 3rem;
 }
