refactor, services added

--- a/app/styles/blame.scss
+++ b/app/styles/blame.scss
@@ -1,50 +1,29 @@
+$page-padding: 20px;
 
-.st-satellyte {
-  width: 100%;
-  max-height: 400px;
+html {
+  font-size: percentage(10/16);
+  font-family: 'Roboto', sans-serif;
+
+  background-color: color(dark);
+  color: color(white);
+}
+body {
+  font-size: 1.5rem;
+  margin: 0;
+  padding: $page-padding;
+  line-height: 1.4;
 }
 
-.sy-main-container {
+p {
+  margin: 0;
 }
+
+
 .sy-section {
-  max-width: 340px;
-  margin-bottom: 30px;
-  padding: 20px;
-  margin: auto;
-}
-
-.sy-button {
-  color: #282c59;
-  background-color: $highlight;
-  border: 0;
-  padding: 10px;
-  width: 100%;
-  text-align: left;
-  font-weight: 600;
-  &:hover {
-    background-color: #282c59;
-    color: $highlight;
+  p + p {
+    margin-top: 20px;
   }
 }
 
 
-// .sy-headline {
-//   font-weight: 300;
-//   margin: 0;
-// }
 
-// .sy-headline--text {
-//   font-size: 2rem;
-//   font-weight: 600;
-// }
-
-// .sy-headline--sub {
-//   color: $highlight;
-//   font-size: 2rem;
-//   font-weight: 600;
-// }
-
-// .sy-headline--main {
-//   color: $highlight;
-//   font-size: 3rem;
-// }
