more content updates

--- a/app/partials/services.html
+++ b/app/partials/services.html
@@ -1,29 +1,75 @@
-<div class="sy-services">
-  <div  class="sy-services__item">
-    <h4 class="sy-services__headline">UX/UI</h4>
-    <p class="sy-services__description">
-      Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+<section class="sy-section">
+  <header class="sy-header">
+    <h2 class="sy-headline sy-headline--section">What we do</h2>
+    <span class="sy-header__tagline">We offer only what we’re truely great at ...</span>
+  </header>
+
+  <div class="sy-section__content">
+    <h3 class="sy-headline sy-headline--content">Full Stack Digital Services</h3>
+    <p>
+      Satellytes is an agency that orbits around large enterprises and helps them built the greatest possible services and interfaces. With a y, because it’s cooler and the i was obviously already taken decades ago.
+    </p>
+
+    <p>
+      We offer full stack digital services, starting as soon as somebody has a notion of what could possibly be a good idea to do until the last funnel or line of code is completed and as beautifully peformant as it can be.
     </p>
   </div>
 
-  <div  class="sy-services__item">
-    <h4 class="sy-services__headline">Frontend</h4>
-    <p class="sy-services__description">
-      Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+  <div class="sy-section__content">
+    <div class="sy-services">
+      <div  class="sy-services__item">
+        <h4 class="sy-services__headline">UX/UI</h4>
+        <p class="sy-services__description">
+          Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+        </p>
+      </div>
+
+      <div  class="sy-services__item">
+        <h4 class="sy-services__headline">Frontend</h4>
+        <p class="sy-services__description">
+          Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+        </p>
+      </div>
+
+      <div  class="sy-services__item">
+        <h4 class="sy-services__headline">Backend</h4>
+        <p class="sy-services__description">
+          Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+        </p>
+      </div>
+
+      <div  class="sy-services__item">
+        <h4 class="sy-services__headline">Service Development & Strategy</h4>
+        <p class="sy-services__description">
+          Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="sy-section__content">
+    <h3 class="sy-headline sy-headline--content">What others do better</h3>
+    <p>
+        SEM, XR, E-Commerce, Marketing, simple websites and a lot of other stuff, but we built a vivid and broad network of freelancers and agencies over the last two decades which we always did great jobs with.
     </p>
   </div>
 
-  <div  class="sy-services__item">
-    <h4 class="sy-services__headline">Backend</h4>
-    <p class="sy-services__description">
-      Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
+  <div class="sy-section__content">
+    <h3 class="sy-headline sy-headline--content">Who we work for</h3>
+    <p>
+        SEM, XR, E-Commerce, Marketing, simple websites and a lot of other stuff, but we built a vivid and broad network of freelancers and agencies over the last two decades which we always did great jobs with.
+    </p>
+  </div>
+  <div class="sy-section__content">
+    <img class="sy-image" alt="" src="../assets/images/clients.svg">
+  </div>
+
+  <div class="sy-section__content">
+      <h3 class="sy-headline sy-headline--content">and many more:</h3>
+    <p>
+        All of us have a long history in freelancing which started in 1998 and realized major projects for clients like:
+        Mercedes-Benz, Audi, MINI, Coca-Cola, Vitra, Swarovski, Glamour, Montblanc, O2, T-Mobile, Deutsche Post, P&S Reemtsma, Bacardi, Bogner, Siemens, Siemens Mobile, T-Online, Pritt, BMW, Mazda, Constantin Film, Esprit, etc.
     </p>
   </div>
 
-  <div  class="sy-services__item">
-    <h4 class="sy-services__headline">Service Development & Strategy</h4>
-    <p class="sy-services__description">
-      Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus.
-    </p>
-  </div>
-</div>
+</section>
