--- a/app/styles/blame.scss
+++ b/app/styles/blame.scss
@@ -1,29 +1,92 @@
-$page-padding: 20px;
-
 html {
   font-size: percentage(10/16);
   font-family: 'Roboto', sans-serif;
 
-  background-color: color(dark);
-  color: color(white);
+  background-color: sycolor(dark);
+  color: sycolor(white);
 }
+
 body {
   font-size: 1.5rem;
   margin: 0;
   padding: $page-padding;
   line-height: 1.4;
 }
+* {
+  box-sizing: border-box;
+}
 
 p {
   margin: 0;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
+
+.sy-link {
+  color: sycolor(brand);
+  font-weight: map-get($font-weights, bold);
+  text-decoration: none;
+}
 
 .sy-section {
   p + p {
-    margin-top: 20px;
+    margin-top: $content-distance;
   }
+}
+
+.sy-section + .sy-section {
+  margin-top: 60px;
+}
+
+.sy-section__content  + .sy-section__content {
+  margin-top: 60px;
+}
+
+.sy-meetups {
+  margin-top: $content-distance;
+  margin-bottom: $content-distance;
+}
+
+.sy-meetups__item {
+  display: flex;
+}
+
+.sy-meetups__item + .sy-meetups__item {
+  margin-top: 25px;
+}
+
+.sy-meetups__date {
+  padding: 5px;
+
+  margin-right: 20px;
+
+  background-color: sycolor(brand);
+  border-radius: 5px;
+  color: sycolor(dark);
+
+  width: 5rem;
+  height: 5rem;
+
+  font-size: 1.5rem;
+  font-weight: map-get($font-weights, bold);
 }
 
 
 
+.sy-layout--two-cols {
+  display: flex;
+
+  .sy-column {
+    width: 50%;
+  }
+  .sy-column:first-child {
+    margin-right: 20px;
+  }
+}
+
+.sy-address {
+  font-size: 1.4rem;
+}
