add form and footer

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -5,7 +5,41 @@
       <a class="sy-link" href='ping@satellytes.com'>ping@satellytes.com</a>.
   </p>
 
+  <div class="sy-spacer"></div>
+
   <form>
+    <div class="sy-formgroup">
+      <div class="sy-formfield">
+        <div class="sy-formfield__input">
+          <input class="sy-input" type="text" placeholder="Your name"/>
+        </div>
+        <div class="sy-formfield__postfix">
+            <img src="../assets/images/icon-person.svg"/>
+        </div>
+      </div>
+    </div>
+
+    <div class="sy-formgroup">
+      <div class="sy-formfield">
+        <div class="sy-formfield__input">
+          <input class="sy-input" type="text" placeholder="Your email"/>
+        </div>
+
+        <div class="sy-formfield__postfix">
+          <img src="../assets/images/icon-mail.svg"/>
+        </div>
+      </div>
+    </div>
+
+    <div class="sy-formgroup">
+      <div class="sy-formfield">
+        <textarea class="sy-input"  placeholder="Your message to us"></textarea>
+      </div>
+    </div>
+
+    <div class="sy-formgroup">
+    <button class="sy-button">Send</button>
+    </div>
 
   </form>
 </section>
