--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -4,6 +4,8 @@
 @import "blame";
 
 @import "headlines";
+@import "form";
+@import "button";
 @import "services";
 @import "meetups";
 @import "intro";
