--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -10,8 +10,8 @@
 
   <div class="sy-section__content">
     <div class="sy-servicelinks">
-      <a class="sy-servicelinks__item sy-link">Impressum</a>
-      <a class="sy-servicelinks__item sy-link">Datenschutz</a>
+      <a href='/imprint.html' class="sy-servicelinks__item sy-link">Impressum</a>
+      <a href='/privacy.html' class="sy-servicelinks__item sy-link">Datenschutz</a>
     </div>
   </div>
 </footer>
