update large screen view

--- a/app/partials/office.html
+++ b/app/partials/office.html
@@ -5,7 +5,7 @@
     <img class="sy-image" alt="" src="../assets/images/office-map.png">
     <div class="sy-spacer"></div>
 
-    <div class="sy-layout sy-layout--two-cols">
+    <div class="sy-grid sy-grid--two-cols">
       <div class="sy-column">
         <div class="sy-address">
           <strong>Satellytes GmbH</strong><br>
