--- a/app/styles/blame.scss
+++ b/app/styles/blame.scss
@@ -14,3 +14,13 @@
 .sy-footer {
   padding-bottom: 60px;
 }
+
+
+.sy-landingpage {
+  @include media-breakpoint-up(sm) {
+    background-image: url("../assets/images/test-circle.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: 10%;
+  }
+}
