--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -8,7 +8,8 @@
 @import "button";
 @import "services";
 @import "meetups";
-@import "intro";
 @import "navigation";
-
+@import "layout";
 @import "scaffolding";
+
+@import "intro";
