--- a/app/styles/intro.scss
+++ b/app/styles/intro.scss
@@ -5,6 +5,27 @@
   margin-bottom: -150px; // bleed in following content
 }
 
+.sy-intro__compact {
+
+  display: block;
+  width: 100%;
+  height: 100%;
+
+  @include media-breakpoint-up(sm) {
+    display: none;
+  }
+}
+
+.sy-intro__large {
+  display: none;
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
+  @include media-breakpoint-up(sm) {
+    display: block;
+  }
+}
+
 .sy-intro__svg {
   display: block;
   width: 100%;
