refactor, and external css

--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,17 +1,17 @@
 <footer class="sy-footer sy-section">
   <div class="sy-section__content">
-    <div class="sy-weblinks">
-      <img class="sy-weblinks__item" src="../assets/images/icon-xing.svg"/>
-      <img class="sy-weblinks__item" src="../assets/images/icon-linkedin.svg"/>
-      <img class="sy-weblinks__item" src="../assets/images/icon-facebook.svg"/>
-      <img class="sy-weblinks__item" src="../assets/images/icon-twitter.svg"/>
+    <div class="sy-footer__weblinks">
+      <img class="sy-footer__weblinks__item" src="../assets/images/icon-xing.svg"/>
+      <img class="sy-footer__weblinks__item" src="../assets/images/icon-linkedin.svg"/>
+      <img class="sy-footer__weblinks__item" src="../assets/images/icon-facebook.svg"/>
+      <img class="sy-footer__weblinks__item" src="../assets/images/icon-twitter.svg"/>
     </div>
   </div>
 
   <div class="sy-section__content">
-    <div class="sy-servicelinks">
-      <a href='/imprint.html' class="sy-servicelinks__item sy-link">Impressum</a>
-      <a href='/privacy.html' class="sy-servicelinks__item sy-link">Datenschutz</a>
+    <div class="sy-footer__servicelinks">
+      <a href='/imprint.html' class="sy-footer__servicelinks-item sy-link">Impressum</a>
+      <a href='/privacy.html' class="sy-footer__servicelinks-item sy-link">Datenschutz</a>
     </div>
   </div>
 </footer>
