--- a/app/partials/landingpage/services.html
+++ b/app/partials/landingpage/services.html
@@ -61,7 +61,7 @@
     </p>
   </div>
   <div class="sy-section__content">
-    <img class="sy-image" alt="" src="../assets/images/clients.svg">
+    <img class="sy-image" alt="" src="../../assets/images/clients.svg">
   </div>
 
   <div class="sy-section__content">
