--- a/app/partials/landingpage/contact.html
+++ b/app/partials/landingpage/contact.html
@@ -1,4 +1,5 @@
 <section class="sy-section">
+  <a name="sy-contact"></a>
   <h2 class="sy-headline sy-headline--section">Contact</h2>
   <p>
       Nutzen Sie unser Kontaktformular oder schreiben Sie uns eine E-Mail an
@@ -14,7 +15,7 @@
           <input class="sy-input" type="text" placeholder="Your name"/>
         </div>
         <div class="sy-formfield__postfix">
-            <img src="../assets/images/icon-person.svg"/>
+            <img src="../../assets/images/icon-person.svg"/>
         </div>
       </div>
     </div>
@@ -26,7 +27,7 @@
         </div>
 
         <div class="sy-formfield__postfix">
-          <img src="../assets/images/icon-mail.svg"/>
+          <img src="../../assets/images/icon-mail.svg"/>
         </div>
       </div>
     </div>
