--- a/app/partials/landingpage/office.html
+++ b/app/partials/landingpage/office.html
@@ -2,7 +2,7 @@
   <h2 class="sy-headline sy-headline--section">Office</h2>
 
   <div class="sy-section__content">
-    <img class="sy-image" alt="" src="../assets/images/office-map.png">
+    <img class="sy-image" alt="" src="../../assets/images/office-map.png">
     <div class="sy-spacer"></div>
 
     <div class="sy-grid sy-grid--two-cols">
