--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,4 +1,9 @@
 $max-page-width: 760px;
+$container-max-widths: 1200px;
+
+$grid-columns: 12;
+$grid-gutter-width: 30px;
+$grid-enable-classes: true;
 
 $font-weights: (
   normal: 400,
@@ -12,6 +17,12 @@ $colors: (
   black: #000000
 );
 
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px
+);
 
 $grid-breakpoints: (
   // Extra small screen / phone
