--- a/app/partials/landingpage/why-us.html
+++ b/app/partials/landingpage/why-us.html
@@ -1,4 +1,4 @@
-<section class="sy-section">
+<section class="sy-section sy-landingpage__what">
   <header class="sy-header">
     <h2 class="sy-headline sy-headline--section">Why us</h2>
     <span class="sy-header__tagline">We’re on your side – and the customer’s.</span>
