--- a/app/styles/landingpage/index.scss
+++ b/app/styles/landingpage/index.scss
@@ -2,3 +2,16 @@
 @import "services";
 @import "meetups";
 @import "navigation";
+
+
+// Push the content for those main section a little bit
+// in.
+.sy-landingpage__what,
+.sy-landingpage__why {
+  @include media-breakpoint-up(sm) {
+    .sy-section__content {
+      margin-left: 80px;
+      margin-right: 80px;
+    }
+  }
+}
