add form netlify

--- a/app/partials/landingpage/contact.html
+++ b/app/partials/landingpage/contact.html
@@ -8,7 +8,7 @@
 
   <div class="sy-spacer"></div>
 
-  <form>
+  <form netlify>
     <div class="sy-formgroup">
       <div class="sy-formfield">
         <div class="sy-formfield__input">
