--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -14,7 +14,8 @@ $colors: (
   white: #ffffff,
   brand: #5CCFE6,
   dark: #202840,
-  black: #000000
+  black: #000000,
+  error: #FF9999
 );
 
 $container-max-widths: (
