--- a/app/partials/landingpage/contact.html
+++ b/app/partials/landingpage/contact.html
@@ -8,7 +8,7 @@
 
   <div class="sy-spacer"></div>
 
-  <form netlify id="sy-contact-form" netlify-honeypot="non-human-field">
+  <form netlify id="sy-contact-form" name='sy-contact-form' netlify-honeypot="non-human-field">
     <div class="sy-formgroup">
       <div class="sy-formfield">
         <div class="sy-formfield__input">
