--- a/app/styles/landingpage/index.scss
+++ b/app/styles/landingpage/index.scss
@@ -2,6 +2,7 @@
 @import "services";
 @import "meetups";
 @import "navigation";
+@import "contact";
 
 
 // Push the content for those main section a little bit
