intro: svg cleanup and random positions more random

--- a/app/partials/landingpage/intro/large.html
+++ b/app/partials/landingpage/intro/large.html
@@ -1,5 +1,6 @@
 <svg class="sy-intro__svg"
-viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+  preserveAspectRatio="xMidYMid"
+  viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
   <!-- Stars -->
   <g class="satellyte__stars"></g>
 
