--- a/app/partials/landingpage/intro/mobile.html
+++ b/app/partials/landingpage/intro/mobile.html
@@ -1,21 +1,12 @@
 <svg class="sy-intro__svg"
-viewBox="0 0 100 190" xmlns="http://www.w3.org/2000/svg">
+  preserveAspectRatio="xMidYMin"
+  viewBox="0 0 100 190" xmlns="http://www.w3.org/2000/svg">
   <!-- Stars -->
   <g class="satellyte__stars"></g>
 
   <!-- Planet -->
   <g transform="translate(250, -100)">
-    <circle cx="0" cy="0" r="300" fill="#ffffff" />
-    <path
-      id='satellyte__path'
-      class="satellyte__path"
-      fill="transparent"
-      stroke="transparent"
-      d=" M 0, 0
-      m -300, 0
-      a 300,300 0 1,0 600,0
-      a 300,300 0 1,0 -600,0"
-    />
+    <circle r="300" fill="#ffffff" />
   </g>
 
   <!-- Satellyte -->
