--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -15,7 +15,8 @@ $colors: (
   brand: #5CCFE6,
   dark: #202840,
   black: #000000,
-  error: #FF9999
+  error: #FF9999,
+  success: #5ce6a1
 );
 
 $container-max-widths: (
