replaced contact-form postfix-icons with transparent versions

--- a/app/partials/landingpage/contact.html
+++ b/app/partials/landingpage/contact.html
@@ -18,7 +18,7 @@
           <input class="sy-input" type="text" aria-label="Ihr Name" placeholder="Ihr Name" name="name" required aria-required="true" />
         </div>
         <div class="sy-formfield__postfix">
-            <img src="../../assets/images/icon-person.svg"/>
+            <img src="../../assets/images/icon-person.png"/>
         </div>
       </div>
     </div>
@@ -26,11 +26,11 @@
     <div class="sy-formgroup">
       <div class="sy-formfield">
         <div class="sy-formfield__input">
-          <input class="sy-input" type="email" aria-label="Ihre E-Mail" placeholder="Ihre E-Mail" name="email" required aria-required="true" autocomplete="off" />
+          <input class="sy-input" type="email" aria-label="Ihre E-Mail" placeholder="Ihre E-Mail" name="email" required aria-required="true" />
         </div>
 
         <div class="sy-formfield__postfix">
-          <img src="../../assets/images/icon-mail.svg"/>
+          <img src="../../assets/images/icon-mail.png"/>
         </div>
       </div>
     </div>
