removed intersectionobserver from navigation

--- a/app/partials/landingpage/meet-us.html
+++ b/app/partials/landingpage/meet-us.html
@@ -1,4 +1,4 @@
-<section class="sy-section">
+<section class="sy-section" id="sy-meet">
   <h2 class="sy-headline sy-headline--section">Meet us</h2>
 
   <div class="sy-section__content">
