--- a/app/partials/landingpage/navigation.html
+++ b/app/partials/landingpage/navigation.html
@@ -1,9 +1,9 @@
 <div class="sy-navigation">
   <nav class="sy-navigation__list">
-    <a class="sy-navigation__item" href='#sy-what'>What we do</a>
-    <a class="sy-navigation__item" href='#sy-why'>Why us</a>
-    <a class="sy-navigation__item" href='#sy-meet'>Meet us</a>
-    <a class="sy-navigation__item" href='#sy-contact'>Contact</a>
+    <a class="sy-navigation__item" href='/#sy-what'>What we do</a>
+    <a class="sy-navigation__item" href='/#sy-why'>Why us</a>
+    <a class="sy-navigation__item" href='/#sy-meet'>Meet us</a>
+    <a class="sy-navigation__item" href='/#sy-contact'>Contact</a>
   </nav>
 
   <div class="sy-navigation__bar">
