--- a/app/partials/landingpage/what.html
+++ b/app/partials/landingpage/what.html
@@ -1,4 +1,4 @@
-<section class="sy-section sy-landingpage__what">
+<section class="sy-section sy-landingpage__what" id="sy-what">
   <header class="sy-header">
     <h2 class="sy-headline sy-headline--section">What we do</h2>
     <span class="sy-header__tagline">We offer only what we’re truely great at ...</span>
