--- a/app/styles/landingpage/navigation.scss
+++ b/app/styles/landingpage/navigation.scss
@@ -55,5 +55,6 @@
   width: 100px;
   background-color: sycolor(brand);
   transform: translate(-50%);
-  transition: transform 0.5s ease-out;
+  opacity: 0;
+  transition: transform 0.5s ease-out, opacity .4s ease-out;
 }
